// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overview that overview page renders normally 1`] = `
<EuiPage
  restrictWidth={false}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      panelPaddingSize="l"
    >
      <Stats
        stats={Array []}
      />
      <EuiFlexGroup
        alignItems="stretch"
        component="div"
        direction="row"
        gutterSize="l"
        justifyContent="flexStart"
        responsive={true}
        wrap={true}
      >
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <EuiTitle
              size="s"
              textTransform="none"
            >
              <h3>
                <FormattedMessage
                  defaultMessage="Active Beats in Last Day"
                  id="xpack.monitoring.beats.overview.activeBeatsInLastDayTitle"
                  values={Object {}}
                />
              </h3>
            </EuiTitle>
            <EuiSpacer
              size="s"
            />
            <InjectIntl(LatestActiveUi)
              latestActive={
                Array [
                  Object {
                    "count": 5,
                    "range": "last1m",
                  },
                  Object {
                    "count": 5,
                    "range": "last5m",
                  },
                  Object {
                    "count": 5,
                    "range": "last20m",
                  },
                  Object {
                    "count": 6,
                    "range": "last1h",
                  },
                  Object {
                    "count": 10,
                    "range": "last1d",
                  },
                ]
              }
            />
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <EuiTitle
              size="s"
              textTransform="none"
            >
              <h3>
                <FormattedMessage
                  defaultMessage="Top 5 Beat Types in Last Day"
                  id="xpack.monitoring.beats.overview.top5BeatTypesInLastDayTitle"
                  values={Object {}}
                />
              </h3>
            </EuiTitle>
            <EuiSpacer
              size="s"
            />
            <LatestTypes
              latestTypes={
                Array [
                  Object {
                    "count": 4,
                    "type": "Packetbeat",
                  },
                  Object {
                    "count": 4,
                    "type": "Metricbeat",
                  },
                  Object {
                    "count": 2,
                    "type": "Heartbeat",
                  },
                ]
              }
            />
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <EuiTitle
              size="s"
              textTransform="none"
            >
              <h3>
                <FormattedMessage
                  defaultMessage="Top 5 Versions in Last Day"
                  id="xpack.monitoring.beats.overview.top5VersionsInLastDayTitle"
                  values={Object {}}
                />
              </h3>
            </EuiTitle>
            <EuiSpacer
              size="s"
            />
            <LatestVersions
              latestVersions={
                Array [
                  Object {
                    "count": 8,
                    "version": "6.3.1",
                  },
                  Object {
                    "count": 2,
                    "version": "6.3.0",
                  },
                ]
              }
            />
          </EuiPanel>
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiSpacer
        size="s"
      />
      <EuiFlexGroup
        alignItems="stretch"
        component="div"
        direction="row"
        gutterSize="l"
        justifyContent="flexStart"
        responsive={true}
        wrap={true}
      >
        <EuiFlexItem
          component="div"
          grow={true}
          key="0"
          style={
            Object {
              "minWidth": "45%",
            }
          }
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <InjectIntl(MonitoringTimeseriesContainerUI)
              series={1}
            />
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
          key="1"
          style={
            Object {
              "minWidth": "45%",
            }
          }
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <InjectIntl(MonitoringTimeseriesContainerUI)
              series={1}
            />
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
          key="2"
          style={
            Object {
              "minWidth": "45%",
            }
          }
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <InjectIntl(MonitoringTimeseriesContainerUI)
              series={1}
            />
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
          key="3"
          style={
            Object {
              "minWidth": "45%",
            }
          }
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <InjectIntl(MonitoringTimeseriesContainerUI)
              series={1}
            />
          </EuiPanel>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;

exports[`Overview that overview page shows a message if there is no beats data 1`] = `
<EuiPage
  restrictWidth={false}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      panelPaddingSize="l"
    >
      <Stats
        stats={Array []}
      />
      <EuiCallOut
        color="primary"
        data-test-subj="noRecentActivityMessage"
        iconType="gear"
        size="m"
        title="Hi there! This area is where your latest Beats activity would show up, but you don't seem to have any activity within the last day."
      />
      <EuiSpacer
        size="s"
      />
      <EuiFlexGroup
        alignItems="stretch"
        component="div"
        direction="row"
        gutterSize="l"
        justifyContent="flexStart"
        responsive={true}
        wrap={true}
      >
        <EuiFlexItem
          component="div"
          grow={true}
          key="0"
          style={
            Object {
              "minWidth": "45%",
            }
          }
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <InjectIntl(MonitoringTimeseriesContainerUI)
              series={1}
            />
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
          key="1"
          style={
            Object {
              "minWidth": "45%",
            }
          }
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <InjectIntl(MonitoringTimeseriesContainerUI)
              series={1}
            />
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
          key="2"
          style={
            Object {
              "minWidth": "45%",
            }
          }
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <InjectIntl(MonitoringTimeseriesContainerUI)
              series={1}
            />
          </EuiPanel>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={true}
          key="3"
          style={
            Object {
              "minWidth": "45%",
            }
          }
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <InjectIntl(MonitoringTimeseriesContainerUI)
              series={1}
            />
          </EuiPanel>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;
